k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/auth/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
      - path: "/tickets/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: tickets-srv
            port:
              number: 3000
      - path: "/orders/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: orders-srv
            port:
              number: 3000
